--- a/part4/package.json
+++ b/part4/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "nodemon index.js",
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\","
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "mongoose": "^5.3.14"
   },
   "devDependencies": {
+    "eslint": "^5.9.0",
+    "jest": "^23.6.0",
     "nodemon": "^1.18.7"
   }
 }
